--- a/mmunaf/projects.html
+++ b/mmunaf/projects.html
@@ -17,7 +17,7 @@
     <body>
         <nav id="desktop">
             <div class="leftSideNav">
-                <img src="Images/logo.jpg" alt="" />
+                <a href="index.html"><img src="Images/logo.jpg" alt="" /></a>
                 <div class="navLinks">
                     <a href="index.html">Home</a>
                     <a href="#" class="active">Projects</a>
@@ -26,19 +26,19 @@
                 </div>
             </div>
             <div class="rightSideNav">
-                <a href="https://www.behance.net/mmunaf"
+                <a href="https://www.behance.net/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Behance -Original.svg"
                         alt=""
                 /></a>
-                <a href="https://dribbble.com/mmunaf"
+                <a href="https://dribbble.com/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Dribbble - Original.svg"
                         alt=""
                 /></a>
-                <a href="https://www.linkedin.com/in/mmunaf/"
+                <a href="https://www.linkedin.com/in/mmunaf/" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/LinkedIn - Original.svg"
@@ -48,6 +48,13 @@
         </nav>
 
         <nav id="mobile">
+            <a href="index.html"
+                ><img
+                    src="Images/logo.jpg"
+                    alt=""
+                    width="32px"
+                    style="border-radius: 100%"
+            /></a>
             <img
                 src="Icons/menu.svg"
                 alt="hamburger icon"
@@ -63,19 +70,19 @@
                 <a href="contact.html">Contact</a>
             </div>
             <div class="socialsMobileTop">
-                <a href="https://www.behance.net/mmunaf"
+                <a href="https://www.behance.net/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Behance -Original.svg"
                         alt=""
                 /></a>
-                <a href="https://dribbble.com/mmunaf"
+                <a href="https://dribbble.com/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Dribbble - Original.svg"
                         alt=""
                 /></a>
-                <a href="https://www.linkedin.com/in/mmunaf/"
+                <a href="https://www.linkedin.com/in/mmunaf/" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/LinkedIn - Original.svg"
@@ -98,7 +105,7 @@
             data-aos-delay="100"
             data-aos-duration="600"
         >
-            <div class="projectCatSelector" data-aos="fade-up">
+            <div class="projectCatSelector">
                 <div class="catBtn current" onclick="openTab(event, 'UI/UX')">
                     <p class="catBtnText">Mobile Apps</p>
                 </div>
