--- a/mmunaf/contact.html
+++ b/mmunaf/contact.html
@@ -18,28 +18,28 @@
     <body>
         <nav id="desktop">
             <div class="leftSideNav">
-                <img src="Images/logo.jpg" alt="" />
+                <a href="index.html"><img src="Images/logo.jpg" alt="" /></a>
                 <div class="navLinks">
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
                     <a href="services.html">Services</a>
-                    <a href="#" class="active">Contact</a>
+                    <a href="contact.html" class="active">Contact</a>
                 </div>
             </div>
             <div class="rightSideNav">
-                <a href="https://www.behance.net/mmunaf"
+                <a href="https://www.behance.net/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Behance -Original.svg"
                         alt=""
                 /></a>
-                <a href="https://dribbble.com/mmunaf"
+                <a href="https://dribbble.com/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Dribbble - Original.svg"
                         alt=""
                 /></a>
-                <a href="https://www.linkedin.com/in/mmunaf/"
+                <a href="https://www.linkedin.com/in/mmunaf/" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/LinkedIn - Original.svg"
@@ -49,6 +49,13 @@
         </nav>
 
         <nav id="mobile">
+            <a href="index.html"
+                ><img
+                    src="Images/logo.jpg"
+                    alt=""
+                    width="32px"
+                    style="border-radius: 100%"
+            /></a>
             <img
                 src="Icons/menu.svg"
                 alt="hamburger icon"
@@ -64,19 +71,19 @@
                 <a href="contact.html" class="active">Contact</a>
             </div>
             <div class="socialsMobileTop">
-                <a href="https://www.behance.net/mmunaf"
+                <a href="https://www.behance.net/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Behance -Original.svg"
                         alt=""
                 /></a>
-                <a href="https://dribbble.com/mmunaf"
+                <a href="https://dribbble.com/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Dribbble - Original.svg"
                         alt=""
                 /></a>
-                <a href="https://www.linkedin.com/in/mmunaf/"
+                <a href="https://www.linkedin.com/in/mmunaf/" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/LinkedIn - Original.svg"
