--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -17,7 +17,7 @@
     <body>
         <nav id="desktop">
             <div class="leftSideNav">
-                <img src="Images/logo.jpg" alt="" />
+                <a href="index.html"><img src="Images/logo.jpg" alt="" /></a>
                 <div class="navLinks">
                     <a href="#" class="active">Home</a>
                     <a href="projects.html">Projects</a>
@@ -26,19 +26,19 @@
                 </div>
             </div>
             <div class="rightSideNav">
-                <a href="https://www.behance.net/mmunaf"
+                <a href="https://www.behance.net/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Behance -Original.svg"
                         alt=""
                 /></a>
-                <a href="https://dribbble.com/mmunaf"
+                <a href="https://dribbble.com/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Dribbble - Original.svg"
                         alt=""
                 /></a>
-                <a href="https://www.linkedin.com/in/mmunaf/"
+                <a href="https://www.linkedin.com/in/mmunaf/" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/LinkedIn - Original.svg"
@@ -48,6 +48,13 @@
         </nav>
 
         <nav id="mobile">
+            <a href="index.html"
+                ><img
+                    src="Images/logo.jpg"
+                    alt=""
+                    width="32px"
+                    style="border-radius: 100%"
+            /></a>
             <img
                 src="Icons/menu.svg"
                 alt="hamburger icon"
@@ -57,25 +64,25 @@
         </nav>
         <div class="mobileNavBtns" id="mobileNavOptions">
             <div class="navLinksMobile">
-                <a href="#" class="active">Home</a>
+                <a href="index.html" class="active">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="socialsMobileTop">
-                <a href="https://www.behance.net/mmunaf"
+                <a href="https://www.behance.net/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Behance -Original.svg"
                         alt=""
                 /></a>
-                <a href="https://dribbble.com/mmunaf"
+                <a href="https://dribbble.com/mmunaf" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/Dribbble - Original.svg"
                         alt=""
                 /></a>
-                <a href="https://www.linkedin.com/in/mmunaf/"
+                <a href="https://www.linkedin.com/in/mmunaf/" target="_blank"
                     ><img
                         class="socialIconTop"
                         src="Icons/LinkedIn - Original.svg"
@@ -224,12 +231,16 @@
         </section>
 
         <section id="services">
-            <p class="smallCaps" data-aos="fade-right">Services</p>
-            <p class="bodyText" data-aos="fade-right">
+            <p class="smallCaps" data-aos="fade-up">Services</p>
+            <p class="bodyText" data-aos="fade-up">
                 Ambition and dedication for the attention to detail.
             </p>
 
-            <div class="servicesContainer" data-aos="fade-up">
+            <div
+                class="servicesContainer"
+                data-aos="fade-up"
+                data-aos-delay="200"
+            >
                 <div class="servicesB">
                     <h3 class="bodyText">Strategy</h3>
                     <p>
@@ -260,10 +271,10 @@
                     display: flex;
                     width: 100%;
                     justify-content: center;
-                    margin-top: 48px;
+                    margin-top: 46px;
                 "
                 data-aos="fade-up"
-                data-aos-delay="160"
+                data-aos-delay="200"
             >
                 <a id="exploreServicesBtn" href="">Explore Services</a>
             </div>
@@ -346,7 +357,7 @@
             </div>
 
             <div class="footerContent">
-                <p>Copyright 2021, Munaf</p>
+                <p>© 2022 mmunaf - All rights Reserved</p>
                 <div class="socialsFooter">
                     <a href="https://www.behance.net/mmunaf"
                         ><img
