--- a/mmunaf/projects.html
+++ b/mmunaf/projects.html
@@ -115,17 +115,19 @@
                 <div class="catBtn" onclick="openTab(event, 'Web')">
                     <p class="catBtnText">Websites</p>
                 </div>
-                <!-- <div class="catBtn" onclick="openTab(event, 'Dev')">
-                    <p class="catBtnText">Web Development</p>
-                </div> -->
             </div>
 
             <div class="projectCatMobileSelector">
                 <select>
-                    <option value="">UI/UX</option>
-                    <option value="">Mobile Design</option>
-                    <option value="">Web Design</option>
-                    <option value="">Web Development</option>
+                    <option value="" onclick="openTab(event, 'UI/UX')">
+                        Mobile Apps
+                    </option>
+                    <option value="" onclick="openTab(event, 'Mobile')">
+                        Web Apps
+                    </option>
+                    <option value="" onclick="openTab(event, 'Web')">
+                        Websites
+                    </option>
                 </select>
             </div>
 
