--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -104,15 +104,15 @@
                     data-aos-delay="100"
                     data-aos-duration="800"
                 >
-                    <a id="downloadProjectBtn" href="">Get in Contact</a>
-                    <a id="getInContactBtn" href="#contact"
+                    <a id="downloadProjectBtn" href="#contact">Get in Touch</a>
+                    <!-- <a id="getInContactBtn" href="#"
                         >Check Portfolio
                         <!-- <img
                             src="Icons/arrow-right.svg"
                             alt="right arrow"
                             style="margin-left: 6px"
-                    /> --></a
-                    >
+                    /></a 
+                    >-->
                 </div>
             </div>
             <img src="Images/hero_img.png" alt="" class="heroPic" />
@@ -217,6 +217,62 @@
                             <p>Web Development</p>
                             <p>Portfolio</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="projectIndex">
+                <div class="col">
+                    <div class="projectTemplate">
+                        <img
+                            src="Images/Projects/aden.png"
+                            class="projectTemplateImg"
+                        />
+                        <p class="projectTemplateTitle">Aden</p>
+                        <p class="projectTemplateSubText">
+                            CookEasy - Is an app that lets users do this this
+                            and this
+                        </p>
+                        <a href="" class="projectTemplateButton">Coming Soon</a>
+                    </div>
+
+                    <div class="projectTemplate">
+                        <img
+                            src="Images/Projects/My_Municipality.png"
+                            class="projectTemplateImg"
+                        />
+                        <p class="projectTemplateTitle">My Municipality</p>
+                        <p class="projectTemplateSubText">
+                            CookEasy - Is an app that lets users do this this
+                            and this
+                        </p>
+                        <a href="" class="projectTemplateButton">Coming Soon</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="projectTemplate">
+                        <img
+                            src="Images/Projects/CrustPlay.png"
+                            class="projectTemplateImg"
+                        />
+                        <p class="projectTemplateTitle">CrustPlay</p>
+                        <p class="projectTemplateSubText">
+                            CookEasy - Is an app that lets users do this this
+                            and this
+                        </p>
+                        <a href="" class="projectTemplateButton">Coming Soon</a>
+                    </div>
+
+                    <div class="projectTemplate">
+                        <img
+                            src="Images/Projects/Daastan_site.png"
+                            class="projectTemplateImg"
+                        />
+                        <p class="projectTemplateTitle">Daastan Website</p>
+                        <p class="projectTemplateSubText">
+                            CookEasy - Is an app that lets users do this this
+                            and this
+                        </p>
+                        <a href="" class="projectTemplateButton">Coming Soon</a>
                     </div>
                 </div>
             </div>
